updates for SAIC ASPN project

--- a/resume.tex
+++ b/resume.tex
@@ -39,7 +39,7 @@
 	\vspace*{-8pt}
 	\begin{center}
 		{\LARGE \scshape {#1}}\\
-		#2 \lineunder 	#3
+		#2 \\	#3
 	\end{center}
 	\vspace*{-8pt}
 }
@@ -66,60 +66,96 @@
 
 %\small
 %\smallskip
-\vspace*{-44pt}
+\vspace*{-36pt}
 
 \contact{Robert G. Cofield}
 {257 South Gay Street, Apt 317A, Auburn AL 36830}
 {(205) 260-7269 $\bullet$ robertgcofield@gmail.com}
 
-\header{Education}
 
-\schoolwithcourses{Auburn University}{Auburn, AL, U.S.A.}{Bachelor of Science in Mechanical Eng., May 2013}
-{Cumulative GPA: 3.58/4.00}
-	\area{Mechanical Engineering}{ CAD $\cdot$ Modelling and Control of Dynamical Systems $\cdot$ FEA $\cdot $ Mechatronics  Mechanics of Materials $\cdot$ Machining $\cdot$ Microcontroller Programming $\cdot$ Signal Conditioning and Processing $\cdot$ Sensor Calibration}
-	\area{Mathematics}{Multivariable Calculus $\cdot$ Linear Algebra $\cdot$ Numerical Analysis $\cdot$ Differential Modelling System Identification and Characterization}
-	\begin{achievements}
-	\item Investigated robotic leg mechanism design for honors contract course credit. Modelled kinematics and dynamics of twelve-bar Jansen linkage to evaluate load transportation potential.
-	\item Continued development of teamwork skills thoughout numerous successful group projects.
-	\item Honed communication skills during course in public speaking.
-	\item Extended metal working experience during machine shop certification.
-	\end{achievements}
-
+%%%%%%%%%%%%%%%%%%
+%% Work History %%
+%%%%%%%%%%%%%%%%%%
 
 \header{Work History}
 
-\employer{GPS and Vehicle Dynamics Laboratory}{May 2012 - Present}{Assistant Researcher}
-	\begin{achievements}
-	\item Designed and implemented data bridge between two message passing architectures for flexible, robust error calculation and visualization of multiply derived position solutions. Optimized algorithm through real-time testing in fully instrumented vehicle.
-	\item Wrote GPS reciever interface and integrated with existing systems. Devised and carried out performance tests which experimentally compared new receiver to benchmark specifications.
-	\item Created an efficient graphical user interface to aid vehicle drivers in path fidelity and collision avoidance during low-visibility caravanning scenarios.
-	\item Trained coworkers in lighweight robotic operating systems while programming pointcloud-based waypoint identification functionality for miniature autonomous ground vehicle.
-	\end{achievements}
+	%% GAVLab %%
+	\employer{GPS and Vehicle Dynamics Laboratory} {May 2012 - Present}
+	{Assistant Researcher}
+		
+		\begin{achievements}
+			% MOOS/ROS Bridge - FHWA2
+			\item Designed and implemented data bridge between two message passing architectures for flexible, robust error calculation and visualization of multiply derived position solutions. Optimized algorithm through real-time testing in instrumented vehicle.
+			% FHWA2 GUI
+			\item Created graphical user interface to aid in the development of navigation sensor fusion algorithms, allowing user to visualize positioning solutions and error ellipses for real-time comparison.
+			% MARV
+			\item Trained coworkers in lightweight robotic operating systems while programming way point identification capabilities using point clouds for a miniature autonomous ground vehicle.
+			% FHWA3
+			\item Currently investigating sensor fusion algorithms for providing navigation information to blind pedestrians, incorporating map database information, limited GNSS coverage, stereo camera data, and multiple IMU devices.
+		\end{achievements}
 
-\employer{Fargason Contracting, Inc}{May 2009 - January 2010}{Assistant to Licensed Contractor and Electrician}
-	\begin{achievements}
-	\item Trained in operating and maintaining an extensive array of heavy machinery and power tools.
-	\item Learned equipment and chemical safety procedures in both industrial and residential settings.
-	\end{achievements}
+	%% Fargason - Construction %%
+	\employer{Fargason Contracting, Inc} {May 2009 - January 2010}
+	{Assistant to Licensed Contractor and Electrician}
+		
+		\begin{achievements}
+			\item Trained in operating and maintaining an extensive array of heavy machinery and power tools.
+			\item Learned equipment and chemical safety procedures in both industrial and residential settings.
+		\end{achievements}
 
+
+%%%%%%%%%%%%%%%
+%% Education %%
+%%%%%%%%%%%%%%%
+
+\header{Education}
+
+	%% Undergraduate %%
+	\schoolwithcourses{Auburn University}
+	{Auburn, AL, USA } { Bachelor of Science in Mechanical Eng., May 2013}
+	{Cumulative GPA: $3.58/4.00$}
+		
+		\area{Mechanical Engineering}
+			{ CAD $\cdot$ Modeling and Control of Dynamical Systems $\cdot$ FEA $\cdot $ Mechatronics $\cdot$ Mechanics of Materials $\cdot$ Machining $\cdot$ Microcontroller Programming $\cdot$ Signal Conditioning and Processing $\cdot$ Sensor Calibration $\cdot$ Multivariable Calculus $\cdot$ Linear Algebra $\cdot$ Numerical Analysis $\cdot$ Dynamic Modeling $\cdot$ System Identification and Characterization}
+		\area{Undergraduate Honors Thesis}
+			{ Created an efficient graphical user interface to aid ground vehicle drivers in path fidelity and collision avoidance during low-visibility caravan scenarios. Used differential GPS techniques to implement relative positioning in real-time. Devised human testing scenarios to evaluate effectiveness.}
+		
+		\begin{achievements}
+			\item Investigated robotic leg mechanism design for honors contract course credit. Modeled kinematics and dynamics of twelve-bar Jansen linkage to evaluate load transportation potential.
+			\item Continued development of teamwork skills throughout numerous successful group projects.
+			\item Honed communication skills during course in public speaking.
+			\item Extended metal working experience during machine shop certification.
+		\end{achievements}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Miscellaneous Abilities %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \header{Skills and Relevant Experience}
-\begin{achievements}
-\item C++, Python, MATLAB, Linux shell scripting, \LaTeX
-\item ROS, MOOS,  Solid Edge, ANSYS
-\item Repaired and tuned a cluth-actuated, rear wheel differential steering system on commercial mower with trailer dynamics, drawing on experience with zero-point-turn vehicle behavior.
-\end{achievements}
+
+	\begin{achievements}
+		\item C++, Python, MATLAB, Linux Shell, \LaTeX
+		\item ROS, MOOS,  Solid Edge, ANSYS
+		\item Repaired and tuned a cluth-actuated, rear wheel differential drive steering system on commercial mower with trailer dynamics, drawing on experience with zero-point-turn vehicle behavior.
+		\item Completed CITI training to participate in IRB-approved human testing projects
+	\end{achievements}
 
 
-\header{Honors and Awards}
-\begin{achievements}
-\item  Spirit of Auburn Founder's Scholarship
-\item ConocoPhillips Mechanical Engineering Scholarship
-\item Dean's List, Fall 2009 - Summer 2011
-\item Tau Beta Pi Engineering Honor Society
-\item Pi Tau Sigma Mechanical Engineering Honor Society
-\item Auburn University Linux Club
-\end{achievements}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Miscellaneous Acheivements %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\header{Selected Honors and Memberships}
+
+	\begin{achievements}
+		\item Spirit of Auburn Founder's Scholarship
+		\item ConocoPhillips Mechanical Engineering Scholarship
+		\item Dean's List, Fall 2009 - Summer 2011
+		\item Tau Beta Pi Engineering Honor Society
+		\item Pi Tau Sigma Mechanical Engineering Honor Society
+		\item Auburn University Linux Club
+	\end{achievements}
 
 
 \end{document}
